# vume

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  vume.sh
.github/workflows/: ci.yml  release.yml
config/: vume.toml
scripts/: cleanup.sh  download.sh  release.sh  rootfs.sh  setup.sh
src/: config.rs  firecracker.rs  lib.rs  main.rs  network.rs  ssh.rs  state.rs  vm.rs
tests/: vm_lifecycle.rs
